check agreements post
